force-app/main/default/objects/Case_Platform_Event__e/Case_Platform_Event__e.object-meta.xml
<CustomObject>
    <label>Case Platform Event</label>
    <pluralLabel>Case Platform Events</pluralLabel>
</CustomObject>