force-app/main/default/objects/Case_Platform_Event__e/fields/Case_Category_Config_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Category_Config_Id__c</fullName>
    <label>Case Category Config Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>