force-app/main/default/objects/Case_Platform_Event__e/fields/Case_Field_Config_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Field_Config_Id__c</fullName>
    <label>Case Field Config Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>