force-app/main/default/objects/Case_Platform_Event__e/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>