force-app/main/default/objects/Case_Platform_Event__e/fields/Input_Parameters__c.field-meta.xml
<CustomField>
    <fullName>Input_Parameters__c</fullName>
    <label>Input Parameters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>