force-app/main/default/objects/Case_Platform_Event__e/fields/Integration_Category__c.field-meta.xml
<CustomField>
    <fullName>Integration_Category__c</fullName>
    <label>Integration Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>