force-app/main/default/objects/Case_Platform_Event__e/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <label>Source System</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>